# personal

./: build.sh  db.sqlite3  pyproject.toml  settings.py
mysite/: settings.py
personal/: compute.py  restview.py  serializers.py  settings.py  urls.py  views.py
render/: urls.py
